--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 body
 {
   background-image: url('bg-desktop.svg');
-  background-size: 96%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-color: hsl(257, 40%, 49%);
+  margin: 3rem;
 }
 .header img
 {
@@ -12,38 +13,43 @@ body
 .header
 {
   margin: 3rem;
+  margin-left: 0;
 }
-.container{
+.container
+{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 3rem;
-  margin-bottom: 0%;
+  grid-template-columns: 1.3fr 1fr; 
   
 }
-.illustration,text{
+
+.illustration, img
+{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border: solid black;
+  padding: 0%;
   
 }
-.illustration, img{
-  width: 40rem;
-}
-.illustration{
-  padding: 1rem;
-  
-}
-.text{
+.text
+{
   padding:2rem;
   color: white;
+  border: solid black;
   
 }
-h1{
+h1
+{
   font-family: 'Poppins';
   font-weight: 600;
 }
-p{
+p
+{
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
-.Register{
+.Register
+{
   width: 150px;
   height: 50px;
   border-radius: 25px;
@@ -53,16 +59,16 @@ p{
   font-size: 1rem;
   border: none;
 }
-.contact{
+.contact
+{
    display: flex;
    justify-content: flex-end;
    align-content: center;
-   margin: 3rem;
-   padding-right: 30px;
-   margin-top: 0%;
    height: 3rem;
+   
 }
-.logo{
+.logo
+{
   border: solid white;
   border-width: 1px;
   border-radius: 50%;
@@ -72,13 +78,16 @@ p{
   padding: 10px;
 
 }
-.logo:hover{
+.logo:hover
+{
  border: solid hsl(300, 69%, 71%);
 }
-i:hover{
+i:hover
+{
   color:hsl(300, 69%, 71%);
 }
-button:hover{
+button:hover
+{
   background-color: hsl(300, 69%, 71%);
   color: white;
 }
@@ -86,21 +95,35 @@ button:hover{
   body
   {
     background-image: url('bg-mobile.svg');
-    background-size: cover;
+    background-size: contain;
+    
   }
   .container{
-    grid-template-rows: 1fr 1fr;
-    margin: 3rem;
-    margin-bottom: 0%;
+    grid-template-columns: none;
     border: solid black;
+    text-align: center;
+    margin-top: 4.5rem;
   }
   .contact{
-    justify-content: center;
+   justify-content: center;
    align-content: center;
    margin: 3rem;
    padding-right: 30px;
-   margin-top: 0%;
+   margin-top: 1rem;
    height: 3rem;
   }
-  
+ 
+  .text{
+    border: solid black;
+  }
+  .Register{
+    width: 300px;
+    margin-top: 1rem;
+  }
+  .header{
+
+  }
+  h1{
+    font-size: x-large;
+  }
 }
