--- a/main.css
+++ b/main.css
@@ -19,7 +19,6 @@ body
 {
   display: grid;
   grid-template-columns: 1.3fr 1fr; 
-  
 }
 
 .illustration, img
@@ -36,7 +35,6 @@ body
   padding:2rem;
   color: white;
   border: solid black;
-  
 }
 h1
 {
@@ -94,9 +92,7 @@ button:hover
 @media (max-width: 600px) {
   body
   {
-    background-image: url('bg-mobile.svg');
-    background-size: contain;
-    
+    background-image: url('bg-mobile.svg');  
   }
   .container{
     grid-template-columns: none;
@@ -105,23 +101,19 @@ button:hover
     margin-top: 4.5rem;
   }
   .contact{
+   margin-top: 2rem;
    justify-content: center;
-   align-content: center;
-   margin: 3rem;
-   padding-right: 30px;
-   margin-top: 1rem;
-   height: 3rem;
   }
  
   .text{
-    border: solid black;
+   
   }
   .Register{
     width: 300px;
     margin-top: 1rem;
   }
   .header{
-
+    width: 8rem;
   }
   h1{
     font-size: x-large;
